//
//  FoodListSampleData.swift
//  WW-Exercise-01Tests
//
//  Created by Aylwing Olivas on 1/17/21.
//  Copyright © 2021 Weight Watchers. All rights reserved.
//

import Foundation

let testDataFoodList = """
    [{
        "image": "/images/1033/dynamic/foodandrecipes/2015/07/TANDORI_GRILLED_SHRIMP_1053_800x800.jpg",
        "title": "Summer Grilling",
        "filter": "[\\\"contentTags.food_cooking method.tags:Grilling\\\"]"
    }, {
        "image": "/images/1033/dynamic/foodandrecipes/2013/09/MediterraneanBeanSalad_1187_600.jpg",
        "filter": "",
        "title": "Latest"
    }, {
        "filter": "[\\\"contentTags.food_other.tags:Quick & Easy\\\"]",
        "image": "/images/1033/dynamic/foodandrecipes/2014/07/BeanCheeseHotDogs_052_600.jpg",
        "title": "Quick & Easy"
    }, {
        "filter": "[\\\"contentTags.food_cooking method.tags:No-Cook\\\"]",
        "image": "/images/1033/dynamic/foodandrecipes/2015/08/LemonyBeetHummus_052_800x800.jpg",
        "title": "No-Cook"
    }, {
        "title": "Family-Friendly",
        "image": "/images/1033/dynamic/foodandrecipes/2015/08/TurkeyTacoCups_259_600x600.jpg",
        "filter": "[\\\"contentTags.food_other.tags:Family-Friendly\\\"]"
    }, {
        "image": "/images/1033/dynamic/foodandrecipes/2011/12/HCO_LemonDillGreekChickenSalad_178_600.jpg",
        "filter": "[\\\"contentTags.food_season.tags:Summer\\\"], [\\\"contentTags.food_season.tags:Spring\\\"]",
        "title": "Seasonal"
    }, {
        "title": "American",
        "filter": "[\\\"contentTags.food_cuisines.tags:American\\\"]",
        "image": "/images/1033/dynamic/foodandrecipes/2015/03/MA15_Chili_Vegetarian_0104_rt_800x800.jpg"
    }, {
        "image": "/images/1033/dynamic/foodandrecipes/2014/06/FetaStuffedCherryTomatoes_267_600.jpg",
        "filter": "[\\\"contentTags.food_cuisines.tags:Italian\\\"]",
        "title": "Italian"
    }]
"""
